improve in scan and search page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "esg.linkedtrust",
+  "name": "linkedtrust-esg-platform",
   "private": true,
   "version": "0.0.0",
   "type": "module",
